--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -49,6 +49,32 @@
 
                 </div>
             </nav>
+
+        </div>
+        <div class="card"
+            style="display: flex; flex-direction:column; justify-content:center; margin-top:30px;gap:0px;text-align:center">
+
+            <h1>Developer</h1>
+            <div class="foto"
+                style="display: flex; flex-direction:row; justify-content:center;margin-top:40px; gap:40px;">
+                <div class="suryo"
+                    style="width: 400px; height:400px;border-radius:40px;; background-image:url(suryo.png); background-size:cover;filter:drop-shadow(1px 4px 9px rgb(87, 82, 76))">
+                    <div class="hoverS"
+                        style="width: 100% ; height:200px; display:flex;flex-direction:column; justify-content:baseline">
+
+                        <div class="card"> <h4>SURYO SAPUTRO</h4></div>
+                    </div>
+                </div>
+                <div class="alzhar"
+                    style="width: 400px;overflow:hidden; height:400px;border-radius:40px;; background-image:url(alzhar.png); background-size:cover;filter:drop-shadow(1px 4px 9px rgb(87, 80, 72))">
+                    <div class="hovera" style="margin-top: 300px;">
+                        <div class="card" id="alzharHov"
+                            style="width: 100% ; height:200px; display:flex;flex-direction:column; justify-content:baseline">
+                            <h4>ALZHAR CHANDRADITYA DEWANDRA</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
