--- a/about.html
+++ b/about.html
@@ -52,25 +52,48 @@
 
         </div>
         <div class="card"
-            style="display: flex; flex-direction:column; justify-content:center; margin-top:30px;gap:0px;text-align:center">
+            style="display: flex;border:none;height:120vh;flex-direction:column; justify-content:center; margin-top:30px;gap:0px;text-align:center">
 
             <h1>Developer</h1>
             <div class="foto"
                 style="display: flex; flex-direction:row; justify-content:center;margin-top:40px; gap:40px;">
                 <div class="suryo"
-                    style="width: 400px; height:400px;border-radius:40px;; background-image:url(suryo.png); background-size:cover;filter:drop-shadow(1px 4px 9px rgb(87, 82, 76))">
-                    <div class="hoverS"
-                        style="width: 100% ; height:200px; display:flex;flex-direction:column; justify-content:baseline">
+                    style="width: 400px; height:400px;border-radius:40px;overflow:hidden; background-image:url(suryo.jpeg); background-size:cover;filter:drop-shadow(1px 4px 9px rgb(87, 82, 76))">
+                    <div class="hoverS" style="margin-top: 300px; ;">
 
-                        <div class="card"> <h4>SURYO SAPUTRO</h4></div>
+                        <div class="card" id="suryoHov"
+                            style="width: 100% ;border:none; height:200px; display:flex;flex-direction:column; justify-content:baseline">
+
+                            <h4>SURYO SAPUTRO</h4>
+                        </div>
                     </div>
                 </div>
                 <div class="alzhar"
                     style="width: 400px;overflow:hidden; height:400px;border-radius:40px;; background-image:url(alzhar.png); background-size:cover;filter:drop-shadow(1px 4px 9px rgb(87, 80, 72))">
                     <div class="hovera" style="margin-top: 300px;">
                         <div class="card" id="alzharHov"
-                            style="width: 100% ; height:200px; display:flex;flex-direction:column; justify-content:baseline">
+                            style="width: 100% ;border:none; height:200px; display:flex;flex-direction:column; justify-content:baseline">
                             <h4>ALZHAR CHANDRADITYA DEWANDRA</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h1 style="margin-top: 20px;">Developer Revenue</h1>
+            <div class="FeeDev">
+                <div class="card" style="width: 600px;border:none;margin-left:auto; margin-right:auto;margin-top:30px;">
+                    <div class="row">
+                        <div class="col-6" style="height: 100px;">
+                            <label for="" class="form-label">Keyword</label>
+                            <div class="key" style="display: flex;flex-direction:row; gap:10px">
+                                <input type="text" style="width:200px" class="form-control" id="inputKey">
+                                <button class="btn btn-success" onclick="Dev()">submit</button>
+                            </div>
+                        </div>
+                        <div class="col-6" style="border-left: 1px solid #fd8a51;">
+                            <div class="dev" style="margin-top: 30px;">
+                                <h5 style="width:fit-content" id="isiDev">Rp 0</h5>
+
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -81,5 +104,6 @@
 
 
 </body>
+<script src="apk.js"></script>
 
 </html>
